Generate kip13 InterfaceIdentifier by go, abi, bin

--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "servicechain-bridge-contracts",
   "version": "1.0.0",
   "license": "MIT",
+  "scripts": {
+    "truffle-compile": "truffle compile",
+    "truffle-abigen": "truffle run abigen",
+    "generate-go-files": "node generate-go-contracts.js"
+  },
+
   "dependencies": {
     "@chainsafe/truffle-plugin-abigen": "^0.0.2",
     "@klaytn/contracts": "1.0.2",
